# interruptible_thread

./: .gitignore  CMakeLists.txt  README.md  interruptible_thread.hpp  main.cpp
internal/: posix_intt.hpp  windows_intt.hpp
